# AI-Agent-for-Inbound-Carrier-Sales

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
data/: creating_dataset.py  loads.csv  loads.json
reports/: dashboard.py
routes/: analytics.py  handoff.py  loads.py  negotiate.py  negotiate_graph.py  testing_negotiation_graph.ipynb  verify.py
